fix: get external MCP clients functional (again)
